--- a/index.html
+++ b/index.html
@@ -11,3 +11,11 @@
 		<script type="module" src="./demo/main.ts"></script>
 	</body>
 </html>
+
+<style>
+	html, body {
+		color: rgb(235 235 235 / 64%);
+		font-size: 1rem;
+		background: #222729;
+	}
+	</style>
