chore(seo): update favicon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
+		<link rel="icon" href="/favicon.svg" type="image/svg+xml"  />
+		<link rel="icon" href="/favicon.png" sizes="192x192">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<title>Svelte Simple Router | Svelte 5 SPA router</title>
