chore(lint): fix non project files

--- a/index.html
+++ b/index.html
@@ -1,36 +1,46 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.svg" type="image/svg+xml"  />
-		<link rel="icon" href="/favicon.png" sizes="192x192">
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="/favicon.png" sizes="192x192" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<title>Svelte Simple Router | Svelte 5 SPA router</title>
-		<meta name="description" content="A simple SPA router built with svelte 5, with supports for hash routing, navigation and history API syncing, nested router, async loading and more !">
+    <title>Svelte Simple Router | Svelte 5 SPA router</title>
+    <meta
+      name="description"
+      content="A simple SPA router built with svelte 5, with supports for hash routing, navigation and history API syncing, nested router, async loading and more !"
+    />
 
-		<!--  Open Graph meta tags  -->
+    <!--  Open Graph meta tags  -->
 
-		<meta property="og:type" content="article" />
-		<meta id="og-title" property="og:title" content="Svelte Simple Router | Svelte 5 SPA router" />
-		<meta id="og-description" property="og:description" content="A simple SPA router built with svelte 5, with supports for hash routing, navigation and history API syncing, nested router, async loading and more !" />
-		<meta id="og-image" property="og:image" content="https://dvcol.github.io/svelte-simple-router/img.png" />
-		<meta id="og-url" property="og:url" content="https://dvcol.github.io/svelte-simple-router" />
+    <meta property="og:type" content="article" />
+    <meta id="og-title" property="og:title" content="Svelte Simple Router | Svelte 5 SPA router" />
+    <meta
+      id="og-description"
+      property="og:description"
+      content="A simple SPA router built with svelte 5, with supports for hash routing, navigation and history API syncing, nested router, async loading and more !"
+    />
+    <meta id="og-image" property="og:image" content="https://dvcol.github.io/svelte-simple-router/img.png" />
+    <meta id="og-url" property="og:url" content="https://dvcol.github.io/svelte-simple-router" />
 
-		<!--  Twitter tags  -->
+    <!--  Twitter tags  -->
 
-		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:site" content="Svelte Simple Router" />
-		<meta id="tw-title" name="twitter:title" content="Svelte Simple Router | Svelte 5 SPA router" />
-		<meta id="tw-description" name="twitter:description" content="A simple SPA router built with svelte 5, with supports for hash routing, navigation and history API syncing, nested router, async loading and more !" />
-		<meta id="tw-image" name="twitter:image" content="https://dvcol.github.io/svelte-simple-router/img.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="Svelte Simple Router" />
+    <meta id="tw-title" name="twitter:title" content="Svelte Simple Router | Svelte 5 SPA router" />
+    <meta
+      id="tw-description"
+      name="twitter:description"
+      content="A simple SPA router built with svelte 5, with supports for hash routing, navigation and history API syncing, nested router, async loading and more !"
+    />
+    <meta id="tw-image" name="twitter:image" content="https://dvcol.github.io/svelte-simple-router/img.png" />
 
-		<meta name="twitter:creator" content="@Dinh_Van" />
-		<meta name="twitter:site" content="@Dinh_Van" />
-
-	</head>
-	<body>
-		<div id="app"></div>
-		<script type="module" src="./demo/main.ts"></script>
-	</body>
+    <meta name="twitter:creator" content="@Dinh_Van" />
+    <meta name="twitter:site" content="@Dinh_Van" />
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="./demo/main.ts"></script>
+  </body>
 </html>
